# vycmd

./: README.rst  pyproject.toml
schema/: command-definition.rnc  command-definition.rng
